[project]
name = "aces-high-poker-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aces-high-core-py>=0.1.1",
    "cosmic-ray>=8.4.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "I"]
